# mai_deep_cpp_autumn_2024

./: .gitignore  README.md
01/: CMakeLists.txt
01/include/: allocator.h
01/src/: allocator.cpp
01/test/: test.cpp
02/: CMakeLists.txt
02/src/: allocator.cpp
02/test/: test.cpp
03/: CMakeLists.txt
03/include/: matrix.h  tokenizer.h
03/src/: matrix.cpp  tokenizer.cpp
03/test/: test.cpp
04/: CMakeLists.txt
04/include/: BigInt.h  Fourier.h  matrix_row.h  unique.h  vector.h
04/src/: ArithmeticOperations.cpp  BigInt.cpp  CMakeLists.txt  Constructors.cpp  Fourier.cpp  Predicates.cpp  cheker.sh  main.cpp  matrix_row.cpp  one_file.cpp  test_gen.py  timer.sh  unique.cpp  vector.cpp
04/test/: test.cpp
04/tests/: CMakeLists.txt  arithmetic_tests.cpp  constructor_tests.cpp  predicates_tests.cpp  tests_main.cpp
05/: CMakeLists.txt
05/include/: deserializer.h  deserializer.hpp  is_serializable.h  serializer.h  serializer.hpp
05/tests/: tests.cpp
06/: CMakeLists.txt
06/include/: formatter.h  formatter.hpp
06/tests/: tests.cpp
